--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,12 +20,12 @@ AllCops:
     - 'db/**/*'
     - 'db/schema.rb'
     - 'db/seeds.rb'
-    - 'client/node_modules/**/*.*'
-    - 'client/node_modules/**/.*'
     - 'bin/**/*'
     - !ruby/regexp /old_and_unused\.rb$/
     - 'spec/dummy/Procfile.*'
     - 'spec/dummy/bin/**/*'
+    - 'spec/dummy/node_modules/**/*'
+    - 'spec/dummy/node_modules/**/.*'
     - 'spec/dummy/client/node_modules/**/*'
     - 'spec/dummy/client/node_modules/**/.*'
     - 'gen-examples/examples/**/.*'
