--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "Rails"
   ],
   "author": "justin@shakacode.com",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/shakacode/react_on_rails_pro/issues"
   },
