Update spec dummy match react on rails (#115)
Switch to updated webpack configuration

Similar updates were merged into React on Rails:
https://github.com/shakacode/react_on_rails/commit/dc56129a9c300a6f76350d02ba6289c376aa1ca6

--- a/react_on_rails_pro/spec/dummy/client/package.json
+++ b/react_on_rails_pro/spec/dummy/client/package.json
@@ -85,5 +85,5 @@
     "vm-renderer": "RENDERER_PORT=3800 node vm-renderer.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "UNLICENSED"
 }
