--- a/node_package/.babelrc
+++ b/node_package/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": [
     ["@babel/preset-env", {"useBuiltIns": "entry"}],
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
   "plugins": [
-    "@babel/plugin-transform-flow-strip-types",
     ["@babel/plugin-transform-runtime", {"corejs": 2}]
   ]
 }
