--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.8.3",
     "@babel/types": "^7.0.0",
+    "@types/node": "^13.9.0",
+    "@types/turbolinks": "^5.2.0",
     "babel-loader": "^8.0.2",
     "babel-tape-runner": "^3.0.0",
     "babelify": "^10.0.0",
@@ -39,6 +42,7 @@
     "release-it": "^8.2.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.7.0",
+    "typescript": "^3.8.3",
     "webpack": "^3.4.1",
     "webpack-manifest-plugin": "^1.2.1"
   },
@@ -59,7 +63,7 @@
     "clean": "rm -rf node_package/lib",
     "prepare": "yarn run build",
     "prepublish": "npm run prepare",
-    "babel": "babel --out-dir node_package/lib node_package/src",
+    "babel": "babel --extensions '.ts' --out-dir node_package/lib node_package/src",
     "build": "yarn run clean && yarn run babel",
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
     "eslint": "eslint .",
