--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^13.9.0",
     "@types/turbolinks": "^5.2.0",
     "babel-loader": "^8.0.2",
-    "babel-tape-runner": "^3.0.0",
+    "babel-tape-runner": "Judahmeek/babel-tape-runner",
     "babelify": "^10.0.0",
     "blue-tape": "^1.0.0",
     "create-react-class": "^15.6.0",
