--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,8 @@ rules:
   function-paren-newline: 0
   object-curly-newline: 0
 
+  # https://stackoverflow.com/a/59268871/5241481
+  import/extensions: ['error', 'ignorePackages', {"js": 'never',"ts": "never"}]
 
   # https://github.com/benmosher/eslint-plugin-import/issues/340
   import/no-extraneous-dependencies: 0
@@ -28,3 +30,6 @@ rules:
 settings:
   import/core-modules:
     - react-redux
+  import/resolver:
+    node:
+      extensions: [".js", ".ts"]
