--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "babel": "babel --extensions '.ts' --out-dir node_package/lib node_package/src",
     "build": "yarn run clean && yarn run babel",
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
-    "eslint": "eslint .",
+    "eslint": "eslint --ext '.js,.ts' .",
     "flow": "flow check node_package",
     "lint": "yarn run eslint && yarn run flow",
     "check": "yarn run lint && yarn run flow && yarn run test",
