--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/types": "^7.0.0",
     "@types/node": "^13.9.0",
     "@types/turbolinks": "^5.2.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "babel-loader": "^8.0.2",
     "babel-tape-runner": "Judahmeek/babel-tape-runner",
     "babelify": "^10.0.0",
