--- a/.eslintrc
+++ b/.eslintrc
@@ -17,12 +17,18 @@ env:
   mocha: true
 
 overrides:
-  files: ["**/*.ts", "**/*.tsx"]
-  parser: "@typescript-eslint/parser"
-  parserOptions:
-    ecmaVersion: 2018
-    sourceType: module
-    project: "./tsconfig.json"
+  - files: ["**/*.ts", "**/*.tsx"]
+    parser: "@typescript-eslint/parser"
+    parserOptions:
+      ecmaVersion: 2018
+      sourceType: module
+      project: "./tsconfig.json"
+      extends:
+        - eslint:recommended
+        - plugin:@typescript-eslint/eslint-recommended
+        - plugin:@typescript-eslint/recommended
+    plugins:
+      - "@typescript-eslint"
 
 rules:
   no-console: 0
