--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
@@ -31,7 +30,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.1.0",
-    "flow-bin": "^0.83.0",
     "jsdom": "^11.1.0",
     "nps": "^5.9.3",
     "prettier": "^1.14.3",
@@ -69,9 +67,8 @@
     "build": "yarn run clean && yarn run babel",
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
     "eslint": "eslint --ext '.js,.ts' .",
-    "flow": "flow check node_package",
-    "lint": "yarn run eslint && yarn run flow",
-    "check": "yarn run lint && yarn run flow && yarn run test",
+    "lint": "yarn run eslint && yarn run tsc",
+    "check": "yarn run lint && yarn run tsc && yarn run test",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
     "release:patch": "node_package/scripts/release patch",
     "release:minor": "node_package/scripts/release minor",
