--- a/node_package/.babelrc
+++ b/node_package/.babelrc
@@ -5,6 +5,7 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
+    "@babel/plugin-transform-typescript",
     ["@babel/plugin-transform-runtime", {"corejs": 2}]
   ]
 }
