switch babel & tsc for node_package

--- a/package.json
+++ b/package.json
@@ -63,12 +63,11 @@
     "clean": "rm -rf node_package/lib",
     "prepare": "yarn run build",
     "prepublish": "npm run prepare",
-    "babel": "babel --extensions '.ts' --out-dir node_package/lib node_package/src",
-    "build": "yarn run clean && yarn run babel",
+    "build": "yarn run clean && yarn run tsc",
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
     "eslint": "eslint --ext '.js,.ts' .",
-    "lint": "yarn run eslint && yarn run tsc",
-    "check": "yarn run lint && yarn run tsc && yarn run test",
+    "lint": "yarn run eslint",
+    "check": "yarn run lint && yarn run test",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
     "release:patch": "node_package/scripts/release patch",
     "release:minor": "node_package/scripts/release minor",
