loadable-components support (#112)
* Add option to SUPPORT_MODULES for loadable-components

Add require to the vm context
Add doc about SSR with loadable-components
Module wrap instead of passing require in context
Add upload asset route
Remove library target option from vm-renderer
JS tests pass
Ensure handling of async errors with Express

JS test pass
https://github.com/Abazhenov/express-async-handler
https://medium.com/@Abazhenov/using-async-await-in-express-with-node-8-b8af872c0016
https://github.com/Abazhenov/express-async-handler#readme

update ruby for circle ci to 2.7
Remove dir creation in config reading
Change sync to async/await
Added locking to uploading assets
Adjust bundler version
Changed name of ISOLATED_VM to SUPPORT_MODULES
Update to Bundler v2

Co-authored-by: Andrey Ashgaliyev <a.ashgaliev@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,15 @@ aliases:
              echo "Bundler version: "; bundle --version
   - &lint-js
     name: Linting of JS
-    command: yarn lint
+    command: yarn start lint
 
   - &lint-ruby
     name: Linting of Ruby
     command: bundle exec rubocop
+
+  - &format
+    name: Check formatting
+    command: yarn start format.listDifferent
 
   # Install/update Node modules for renderer package unless existing set of modules is satisfying Yarn.
   - &install-package-node-modules
@@ -108,6 +112,7 @@ jobs:
       - run: *install-package-ruby-gems
       - run: *lint-ruby
       - run: *lint-js
+      - run: *format
 
   prettier:
     docker:
