--- a/package-scripts.yml
+++ b/package-scripts.yml
@@ -1,4 +1,24 @@
 scripts:
+  test:
+    default:
+      description: Run all JS tests
+      script: jest packages/vm-renderer/**/*.test.js
+    debug:
+      description: Debug all JS tests
+      script: ndb jest --runInBand packages/vm-renderer/**/*.test.js
+  check:
+    description: Run all checks
+    script: nps lint && nps format.listDifferent && nps test
+  fix:
+    description: Run all code fixes before committing
+    script: nps eslint.fix && nps format
+  vm-renderer:
+    default:
+      description:
+      script: jest packages/vm-renderer/**/*.test.js
+    debug:
+      description: Debug VM Renderer
+      script: rm -rf /tmp/react-on-rails-pro-vm-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node -r source-map-support/register packages/vm-renderer/src/default-vm-renderer.js
   lint:
     description: Run all linters (eslint)
     script: concurrently --prefix "[{name}]" --names "ESLINT" -c "blue,yellow,magenta,orange" "nps eslint"
@@ -23,17 +43,17 @@ scripts:
       script: |
         concurrently \
           --prefix "[{name}]" \
-          --names "js,css,json" \
+          --names "js,json" \
           -c "yellow,magenta,green" \
           "nps format.js.listDifferent" \
           "nps format.json.listDifferent"
     js:
       default:
         description: Run prettier-eslint on JS.
-        script: prettier "packages/**/*.@(js|jsx)" "spec/dummy/client/app/**/*.@(js|jsx)" "**/webpack.config.babel.js" "**/webpack/**/*.js" --write
+        script: prettier "**/*.@(js|jsx)" --write
       listDifferent:
         description: Check if any JS files would change by running prettier-eslint.
-        script: prettier "packages/**/*.@(js|jsx)" "spec/dummy/client/app/**/*.@(js|jsx)" "**/webpack.config.babel.js" "**/webpack/**/*.js" --list-different
+        script: prettier "**/*.@(js|jsx)" --list-different
     json:
       default:
         description: Run prettier on JSON files.
