--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.4.0",
     "husky": "^1.3.1",
-    "jest": "^23.5.0",
+    "jest": "^25.1.0",
     "jsdom": "^13.1.0",
+    "ndb": "^1.1.5",
     "nps": "^5.9.12",
     "prettier": "^1.14.3",
     "prettier-eslint-cli": "^4.7.1",
     "release-it": "^10.0.1",
-    "supertest": "^3.0.0",
+    "supertest": "^4.0.2",
     "tap-diff": "^0.1.1",
     "tap-spec": "^5.0.0",
-    "tape": "^4.6.3",
     "tape-async": "^2.3.0",
     "touch": "^3.1.0",
     "yalc": "^1.0.0-pre.27"
@@ -50,13 +50,12 @@
     "packages/vm-renderer/src"
   ],
   "scripts": {
-    "test": "jest packages/vm-renderer/tests/**/*.test.js",
-    "prerelease": "yarn run check",
+    "test": "nps test",
+    "prerelease": "nps check",
     "start": "nps",
     "developing": "rm -rf /tmp/react-on-rails-pro-vm-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node  -r source-map-support/register packages/vm-renderer/src/default-vm-renderer.js",
     "eslint": "eslint .",
-    "lint": "yarn run eslint",
-    "check": "yarn run lint && yarn run test",
+    "check": "nps lint && nps format && nps test",
     "local": "echo 'Be sure to run yarn run dummy:install' && yarn run build && cd spec/dummy && foreman start",
     "link": "yarn link"
   },
