--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -11,6 +11,8 @@ gem "react_on_rails", "11.3.0"
 gem "net-http-persistent", "~> 3"
 gem "react_on_rails_pro", path: "../.."
 
+gem "webmock" # http mocking
+
 gem "webpacker"
 # gem "bootsnap", require: false
 
