--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -95,7 +95,12 @@
     "type": "git",
     "url": "https://github.com/shakacode/react_on_rails.git"
   },
-  "keywords": ["react", "rails", "server", "rendering"],
+  "keywords": [
+    "react",
+    "rails",
+    "server",
+    "rendering"
+  ],
   "author": "justin808",
   "bugs": {
     "url": "https://github.com/shakacode/react_on_rails_pro/issues"
