changes per review & strict: true

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/types": "^7.0.0",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.0",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "@types/turbolinks": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
@@ -65,9 +67,9 @@
     "prepublish": "npm run prepare",
     "build": "yarn run clean && yarn run tsc",
     "build-watch": "babel --watch --out-dir node_package/lib node_package/src",
-    "eslint": "eslint --ext '.js,.ts' .",
-    "lint": "yarn run eslint",
+    "lint": "eslint --ext '.js,.ts' .",
     "check": "yarn run lint && yarn run test",
+    "type-check": "yarn run tsc --noEmit --noErrorTruncation",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
     "release:patch": "node_package/scripts/release patch",
     "release:minor": "node_package/scripts/release minor",
