Push asset files whenever new bundle is pushed (#118)
Assets always copied every time a new bundle is sent

This way we don't need any shell hacks to make sure assets go over to
the renderer instance.

Also, support an array of assets to copy.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,9 +279,9 @@ jobs:
       - store_test_results:
           path: ~/rspec
       - store_artifacts:
-          path: tmp/capybara
+          path: spec/dummy/tmp/capybara
       - store_artifacts:
-          path: log/test.log
+          path: spec/dummy/log/test.log
       - store_artifacts:
           path: spec/dummy/yarn-error.log
 
@@ -312,9 +312,9 @@ jobs:
       - store_test_results:
           path: ~/rspec
       - store_artifacts:
-          path: tmp/capybara
+          path: spec/dummy/tmp/capybara
       - store_artifacts:
-          path: log/test.log
+          path: spec/dummy/log/test.log
       - store_artifacts:
           path: spec/dummy/yarn-error.log
 
