--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -23,7 +23,6 @@
     "create-react-class": "^15.6.3",
     "css-loader": "^0.28.4",
     "es5-shim": "^4.5.9",
-    "eslint-plugin-prettier": "^3.1.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^4.0.0",
     "history": "^4.6.3",
@@ -59,18 +58,10 @@
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
-    "eslint": "^5.7.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-config-shakacode": "^16.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
     "fbjs": "^1.0.0",
     "jsdom": "^12.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "preload-webpack-plugin": "^3.0.0-alpha.1",
-    "prettier": "^1.14.3",
-    "prettier-eslint-cli": "^4.7.1",
     "tape": "^4.7.0",
     "webpack-dev-server": "^3.2.1",
     "yalc": "^1.0.0-pre.27"
@@ -80,7 +71,7 @@
   },
   "scripts": {
     "test": "yarn run build:test && yarn run lint && rspec",
-    "lint": "eslint --ext .js,.jsx .",
+    "lint": "cd ../.. && nps lint",
     "install-pro-package": "cd client && yarn run install-pro-package",
     "build:test": "rm -rf public/webpack/test && RAILS_ENV=test NODE_ENV=test bin/webpack",
     "build:dev": "rm -rf public/webpack/develoment && RAILS_ENV=development NODE_ENV=development bin/webpack",
