--- a/package-scripts.yml
+++ b/package-scripts.yml
@@ -23,8 +23,8 @@ scripts:
       script: |
         concurrently \
           --prefix "[{name}]" \
-          --names "js,css,json" \
-          -c "yellow,magenta,green" \
+          --names "js,json" \
+          -c "yellow,magenta" \
           "nps format.js.listDifferent" \
           "nps format.json.listDifferent"
     js:
@@ -42,7 +42,8 @@ scripts:
         script: rm -rf packages/vm-renderer/tests/tmp && prettier "**/*.json" --write
       listDifferent:
         description: Check if any JSON files would change by running prettier-eslint.
-        script: prettier "**/*.json" "../spec/**/*.json" --list-different
+        script: prettier "**/*.json" --list-different
+
   renderer:
     description: Starts the node renderer.
     script: node renderer.js
