--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "release:minor": "node_package/scripts/release minor",
     "release:major": "node_package/scripts/release major",
     "dummy:install": "rake dummy_apps",
-    "dummy:spec": "rake run_rspec:dummy",
-    "install-react-on-rails": "yarn link"
+    "dummy:spec": "rake run_rspec:dummy"
   },
   "repository": {
     "type": "git",
