rubocop updated to latest

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -99,3 +99,22 @@ Style/GlobalVars:
 
 Style/FrozenStringLiteralComment:
   EnforcedStyle: always
+
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
+Style/ExponentialNotation:
+  Enabled: true
+
+Style/SlicingWithRange:
+  Enabled: true
+
