--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -14,7 +14,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
-    "@rails/webpacker": "^4.2.2",
+    "@rails/webpacker": "^5.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -60,6 +60,7 @@
     "webpack-merge": "^4.1.5"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
     "body-parser": "^1.19.0",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^3.1.0",
@@ -73,8 +74,10 @@
     "preload-webpack-plugin": "^3.0.0-alpha.1",
     "prettier": "^1.14.3",
     "prettier-eslint-cli": "^4.7.1",
+    "react-refresh": "^0.8.1",
     "tape": "^4.7.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "browser": {
     "fs": false
@@ -84,7 +87,8 @@
     "lint": "cd client && yarn run lint",
     "test": "yarn run build:test && yarn run lint && rspec",
     "build:test": "rm -rf public/webpack/test && RAILS_ENV=test NODE_ENV=test bin/webpack",
-    "build:dev": "rm -rf public/webpack/develoment && RAILS_ENV=development NODE_ENV=development bin/webpack",
+    "build:dev": "rm -rf public/webpack/develoment && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
+    "build:dev:server": "rm -rf public/webpack/develoment && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
     "build:dev:watch": "RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
     "build:production": "RAILS_ENV=production NODE_ENV=production bin/webpack -p",
     "build:clean": "rm -rf public/webpack || true"
