--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -44,7 +44,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^6.0.0-beta.2",
     "react-hot-loader": "^4.12.12",
-    "react-on-rails": "11.3.0",
+    "react-on-rails": "file:.yalc/react-on-rails",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.2.1",
@@ -60,7 +60,7 @@
     "webpack-merge": "^4.1.5"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.0-beta.4",
     "body-parser": "^1.19.0",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^3.1.0",
@@ -76,8 +76,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "react-refresh": "^0.8.1",
     "tape": "^4.7.0",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-dev-server": "^3.2.1"
   },
   "browser": {
     "fs": false
