--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -60,6 +60,7 @@ development:
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
+    extract_css: false
     https: false
     host: localhost
     port: 3035
@@ -80,7 +81,7 @@ development:
 
 test:
   <<: *default
-  compile: false
+  compile: true
 
   # Compile test packs to a separate directory
   public_output_path: webpack/test
