Put back in the custom build options

--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -51,6 +51,8 @@ default: &default
 
 development:
   <<: *default
+  # Turn this to true if you want to use the rails/webpacker check that the test
+  # bundles need building. Also, remove the customization to spec/rails_helper.rb.
   compile: false
 
   public_output_path: webpack/development
