--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -1,10 +1,19 @@
 {
   "name": "react-on-rails-pro-vm-renderer",
-  "version": "1.4.4",
+  "version": "1.5.3",
   "protocolVersion": "1.0.0",
   "description": "react-on-rails-pro JavaScript for react_on_rails_pro Ruby gem",
   "main": "packages/vm-renderer/src/ReactOnRailsProVmRenderer.js",
   "bin": "./packages/vm-renderer/src/default-vm-renderer.js",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "release-it": {
+    "github": {
+      "release": true
+    },
+    "npm": {
+      "publish": false
+    }
+  },
   "directories": {
     "doc": "docs"
   },
